--- a/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "MVC.Grid column styling";
+    ViewBag.Title = "MVC.Grid reloading with post data";
 }
 
 <div class="example content-block">
@@ -9,36 +9,46 @@
         <div class="widget-header">
             <h1>
                 <i class="fa fa-bars"></i>
-                Styling columns
+                Reloading grid with post data
                 <span class="widget-buttons">
+                    <i class="content-refresh fa fa-refresh"></i>
                     <i class="content-toggle"></i>
                 </span>
             </h1>
         </div>
         <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Id).Css("hidden");
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
-
-                    columns.Add(model => model.Age).Titled("Bolded age").Css("bolded");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed").Css("col-xs-1");
-                })
-            )
+            @Html.AjaxGrid(Url.Action("ReloadGrid"))
         </div>
     </div>
 </div>
+
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
         <div class="example-code content-block">
             <div class="widget">
                 <div class="widget-header">
                     <i class="fa fa-code"></i>
-                    View
+                    Main view
+                    <span class="widget-buttons">
+                        <i class="content-toggle"></i>
+                    </span>
+                </div>
+                <div class="widget-content">
+<pre>
+<code>
+@@Html.AjaxGrid(Url.Action(<span class="str">"IndexGrid"</span>))
+</code>
+</pre>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-5">
+        <div class="example-code content-block">
+            <div class="widget">
+                <div class="widget-header">
+                    <i class="fa fa-code"></i>
+                    Partial view
                     <span class="widget-buttons">
                         <i class="content-toggle"></i>
                     </span>
@@ -54,14 +64,9 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Id).Css(<span class="str">"hidden"</span>);
-
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
-
-        columns.Add(model => model.Age).Titled(<span class="str">"Bolded age"</span>).Css(<span class="str">"bolded"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
-        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).Css(<span class="str">"col-xs-1"</span>);
+        columns.Add(model => <span class="cls">DateTime</span>.Now).Titled(<span class="str">"Time stamp"</span>);
     })
 )
 </code>
@@ -70,12 +75,12 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="example-code content-block">
             <div class="widget">
                 <div class="widget-header">
                     <i class="fa fa-code"></i>
-                    Css
+                    Javascript
                     <span class="widget-buttons">
                         <i class="content-toggle"></i>
                     </span>
@@ -83,15 +88,15 @@
                 <div class="widget-content">
 <pre>
 <code>
-&lt;style&gt;
-    .hidden {
-        display: none;
-    }
-
-    .bolded {
-        font-weight: bold;
-    }
-&lt;/style&gt;
+$(<span class="str">'.content-refresh'</span>).on(<span class="str">'click'</span>, <span class="kwd">function</span> () {
+    $(<span class="str">'.mvc-grid'</span>).mvcgrid({    
+        requestType: <span class="str">'post'</span>, <span class="com">// defaults to get</span>
+        reload: <span class="kwd">true</span>,
+        data: {
+            name: <span class="str">'Joe'</span>
+        }
+    });
+})
 </code>
 </pre>
                 </div>
@@ -100,8 +105,16 @@
     </div>
 </div>
 
-<style>
-    .bolded {
-        font-weight: bold;
-    }
-</style>
+@section scripts {
+    <script>
+    $('.content-refresh').on('click', function () {
+        $('.mvc-grid').mvcgrid({
+            requestType: 'post',
+            reload: true,
+            data: {
+                name: 'Joe'
+            }
+        });
+    })
+    </script>
+}
