--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -145,6 +145,9 @@
             <div class="sidebar content-block">
                 <ul>
                     <li>
+                        @Html.ActionLink("Reloading grid with post data", "RequestType", "Javascript")
+                    </li>
+                    <li>
                         @Html.ActionLink("Binding row clicked event", "RowClicked", "Javascript")
                     </li>
                     <li>
