--- a/src/Mvc.Grid.Web/wwwroot/Content/MvcGrid/mvc-grid.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/MvcGrid/mvc-grid.css
@@ -1,5 +1,5 @@
 ﻿/*!
- * Mvc.Grid 1.2.0
+ * Mvc.Grid 1.3.0
  * https://github.com/NonFactors/MVC6.Grid
  *
  * Copyright © NonFactors
@@ -15,6 +15,7 @@
 
 .mvc-grid .filterable {
     padding-right: 30px;
+    position: relative;
 }
 
 .mvc-grid .sortable,
