--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
             <div class="sidebar logo">
                 <a href="https://github.com/NonFactors/MVC6.Grid">
                     <img src="@Url.Content("~/Images/github.png")" alt="" width="80" height="80" />
+                    <span class="version">v@(typeof(IGrid).GetTypeInfo().Assembly.GetName().Version)</span>
                 </a>
             </div>
             <div class="sidebar-search content-block">
