--- a/src/Mvc.Grid.Web/Views/_ViewImports.cshtml
+++ b/src/Mvc.Grid.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using NonFactors.Mvc.Grid;
+﻿@using System.Reflection;
+@using NonFactors.Mvc.Grid;
 @using NonFactors.Mvc.Grid.Web;
 @using NonFactors.Mvc.Grid.Web.Models;
 
