--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -23,10 +23,13 @@ body {
 .logo {
     text-align: center;
 }
+    .logo a {
+        margin-left: 3em;
+    }
 
-    .logo img {
-        height: 80px;
-        width: 80px;
+    .logo .version {
+        vertical-align: bottom;
+        color: #FFFFFF;
     }
 
 .sidebar-search {
