--- a/src/Mvc.Grid.Web/Views/Shared/MvcGrid/_Grid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/MvcGrid/_Grid.cshtml
@@ -54,7 +54,7 @@
                     </tr>
                 }
             }
-            else
+            else if (Model.EmptyText != null)
             {
                 <tr>
                     <td class="mvc-grid-empty" colspan="@Model.Columns.Count()">
