Proper global search example
- Fixed, global search example not using correct input attributes.

--- a/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
@@ -8,7 +8,7 @@
             <h1>
                 <i class="fa fa-bars"></i>
                 Global grid searching
-                <input id="grid-search" class="grid-search" type="text" placeholder="Search..." />
+                <input class="grid-search" type="text" placeholder="Search..." />
                 <span class="widget-buttons">
                     <i class="content-toggle"></i>
                 </span>
@@ -63,7 +63,7 @@
                 <div class="widget-content">
 <pre>
 <code>
-&lt;input id="grid-search" /&gt;
+&lt;input class="grid-search" /&gt;
 
 @@Html.AjaxGrid(Url.Action(<span class="str">"IndexGrid"</span>))
 
