--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -19,27 +19,109 @@
             </p>
             <pre>> Install-Package NonFactors.Grid.Mvc6</pre>
             <p>
-                Included grid partial views to your Views/Shared folder, they can be found at ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content.
+                Include grid partial views to your shared views folder, they can be found at:
             </p>
-            <pre></pre>
+            <div class="row">
+                <div class="col-lg-6">
+                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\Views\</pre>
+                </div>
+                <div class="col-lg-6">
+                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Views/</pre>
+                </div>
+            </div>
+            <pre>
+&lt;Project name&gt;
+    Views
+        <b style="text-decoration: underline">MvcGrid
+            _AjaxGrid.cshtml
+            _Grid.cshtml
+            _Pager.cshtml</b></pre>
             <p>
                 Register mvc grid at start up
             </p>
-            <pre>using NonFactors.Mvc.Grid;
+            <pre>
+using Microsoft.AspNetCore.Builder;
+using Microsoft.Extensions.DependencyInjection;
+using NonFactors.Mvc.Grid;
 
-services.AddMvcGrid();</pre>
+namespace NonFactors.Mvc.Grid.Web
+{
+    public class Startup
+    {
+        public void ConfigureServices(IServiceCollection services)
+        {
+            services.AddMvc();
+            <b>services.AddMvcGrid();</b>
+        }
+        public void Configure(IApplicationBuilder app)
+        {
+            app.UseMvcWithDefaultRoute();
+            app.UseStaticFiles();
+        }
+    }
+}
+</pre>
             <p>
-                Include grid styling sheet, they can be found at ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content.
+                Include grid styling sheet to your project and your page, it can be found at:
             </p>
-            <pre>&lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet" /&gt;</pre>
+            <div class="row">
+                <div class="col-lg-6">
+                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\Content\MvcGrid\</pre>
+                </div>
+                <div class="col-lg-6">
+                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Content/MvcGrid/</pre>
+                </div>
+            </div>
+            <pre>
+&lt;html&gt;
+    &lt;head&gt;
+        <b>&lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;</b>
+    &lt;/head&gt;
+    &lt;body&gt;
+        @@RenderBody()
+    &lt;/body&gt;
+&lt;/html&gt;</pre>
             <p>
-                Include grid scripts after jQuery scripts.
+                Include grid scripts after jQuery scripts to your project and your page, it can be found at.
             </p>
-            <pre>&lt;script src="~/Scripts/MvcGrid/mvc-grid.js" /&gt;</pre>
+            <div class="row">
+                <div class="col-lg-6">
+                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\Scripts\MvcGrid\</pre>
+                </div>
+                <div class="col-lg-6">
+                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Scripts/MvcGrid/</pre>
+                </div>
+            </div>
+            <pre>
+&lt;html&gt;
+    &lt;head&gt;
+        &lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+        @@RenderBody()
+
+        &lt;script src="~/Scripts/JQuery/jquery.js"&gt;&lt;/script&gt;
+        <b>&lt;script src="~/Scripts/MvcGrid/mvc-grid.js"&gt;&lt;/script&gt;</b>
+    &lt;/body&gt;
+&lt;/html&gt;</pre>
             <p>
-                Initialize MVC.Grid instances after rendering grid html or at the end of the page.
+                Initialize MVC.Grid instances after rendering grid html
             </p>
-            <pre>$('.mvc-grid').mvcgrid();</pre>
+            <pre>
+&lt;html&gt;
+    &lt;head&gt;
+        &lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+        @@RenderBody()
+
+        &lt;script src="~/Scripts/JQuery/jquery.js"&gt;&lt;/script&gt;
+        &lt;script src="~/Scripts/MvcGrid/mvc-grid.js"&gt;&lt;/script&gt;
+        &lt;script&gt;
+            <b>$('.mvc-grid').mvcgrid();</b>
+        &lt;/script&gt;
+    &lt;/body&gt;
+&lt;/html&gt;</pre>
         </div>
     </div>
 </div>
