Namespace usage in examples removal
- Removed namespaces form all examples, because they should be already
included by the installation.

--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -37,6 +37,10 @@
             _Grid.cshtml
             _Pager.cshtml</b></pre>
             <p>
+                Add grid extensions to known namespaces in _ViewImports.cshtml
+            </p>
+            <pre>@@using NonFactors.Mvc.Grid;</pre>
+            <p>
                 Register mvc grid at start up
             </p>
             <pre>
