--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -169,6 +169,13 @@
                     </li>
                 </ul>
             </div>
+            <div class="sidebar content-block">
+                <ul>
+                    <li>
+                        @Html.ActionLink("Grid configuration", "Configuration", "Grid")
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="col-md-10 content">
             @RenderBody()
