--- a/src/Mvc.Grid.Web/Views/Grid/Configuration.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Configuration.cshtml
@@ -53,6 +53,7 @@
 <pre>
 <code>
 $(<span class="str">'.mvc-grid'</span>).mvcgrid({
+    sourceUrl: <span class="str">'IndexGrid'</span>, <span class="com">// Grid source url string</span>
     query: <span class="str">'?search=test'</span>, <span class="com">// Grid query string</span>
     requestType: <span class="str">'get'</span>, <span class="com">// Ajax grid request type</span>
     data: {
