--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -62,6 +62,12 @@
                         @Html.ActionLink("Grid paging", "Paging", "Grid")
                     </li>
                     <li>
+                        @Html.ActionLink("Grid manual paging", "ManualPaging", "Grid")
+                    </li>
+                    <li>
+                        @Html.ActionLink("Grid html attributes", "HtmlAttributes", "Grid")
+                    </li>
+                    <li>
                         @Html.ActionLink("Grid styling", "Styling", "Grid")
                     </li>
                     <li>
@@ -87,6 +93,9 @@
                     </li>
                     <li>
                         @Html.ActionLink("Ajax grid", "Ajax", "Grid", new { mainParam = "mainValue" }, null)
+                    </li>
+                    <li>
+                        @Html.ActionLink("Grid footer", "Footer", "Grid")
                     </li>
                 </ul>
             </div>
