--- a/src/Mvc.Grid.Web/Views/Filter/Register.cshtml
+++ b/src/Mvc.Grid.Web/Views/Filter/Register.cshtml
@@ -174,8 +174,8 @@
                     column.filter.first.type = <span class="str">'Equals'</span>;
                 }
 
-                grid.applyFilter(grid, column);
-                grid.reload(grid);
+                grid.applyFilter(column);
+                grid.reload();
             });
         },
         bindCancel: <span class="kwd">function</span> (grid, column, popup) {
@@ -184,8 +184,8 @@
                 popup.removeClass(<span class="str">'open'</span>);
 
                 if (column.filter.first.type) {
-                    grid.cancelFilter(grid, column);
-                    grid.reload(grid);
+                    grid.cancelFilter(column);
+                    grid.reload();
                 }
             });
         }
@@ -256,8 +256,8 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
                         column.filter.first.type = 'Equals';
                     }
 
-                    grid.applyFilter(grid, column);
-                    grid.reload(grid);
+                    grid.applyFilter(column);
+                    grid.reload();
                 });
             },
             bindCancel: function (grid, column, popup) {
@@ -266,8 +266,8 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
                     popup.removeClass('open');
 
                     if (column.filter.first.type) {
-                        grid.cancelFilter(grid, column);
-                        grid.reload(grid);
+                        grid.cancelFilter(column);
+                        grid.reload();
                     }
                 });
             }
