--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -104,7 +104,7 @@ body {
         }
 
 .widget-content {
-    padding: 15px;
+    padding: 10px;
 }
 
 .ajax-content {
@@ -166,8 +166,13 @@ body {
         background: rgba(94, 186, 103, 0.75);
     }
 
+p {
+    margin: 10px 0;
+}
+
 pre {
     background: #FFFFFF;
+    margin: 0;
 }
 
     pre code .com {
