Correct installation visualization
- Fixed, partial view install steps not showing correct folder
structure, resulting in increased install failures.

--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -32,10 +32,11 @@
             <pre>
 &lt;Project name&gt;
     Views
-        <b style="text-decoration: underline">MvcGrid
-            _AjaxGrid.cshtml
-            _Grid.cshtml
-            _Pager.cshtml</b></pre>
+        Shared
+            <b style="text-decoration: underline">MvcGrid
+                _AjaxGrid.cshtml
+                _Grid.cshtml
+                _Pager.cshtml</b></pre>
             <p>
                 Add grid extensions to known namespaces in _ViewImports.cshtml
             </p>
