--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -25,12 +25,17 @@ body {
 }
 
     .logo a {
-        margin-left: 3em;
+        margin-left: 0.5em;
+        font-size: 84px;
+        color: #FFFFFF;
     }
 
     .logo .version {
+        font-family: 'Open Sans', sans-serif;
         vertical-align: bottom;
-        color: #FFFFFF;
+        margin-left: -20px;
+        font-size: 14px;
+        line-height: 2;
     }
 
 .sidebar-search {
