--- a/src/Mvc.Grid.Web/wwwroot/Content/FontAwesome/font-awesome.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/FontAwesome/font-awesome.css
@@ -6,12 +6,7 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../FontAwesome/Fonts/fontawesome-webfont.eot?v=4.6.3');
-  src: url('../FontAwesome/Fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'),
-       url('../FontAwesome/Fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'),
-       url('../FontAwesome/Fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'),
-       url('../FontAwesome/Fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'),
-       url('../FontAwesome/Fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
+  src: url('../FontAwesome/Fonts/fontawesome-webfont.woff?v=4.6.3') format('woff');
   font-weight: normal;
   font-style: normal;
 }
