--- a/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
@@ -114,7 +114,7 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
 
 <span class="com">// or</span>
 
-$(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span>, <span class="kwd">function</span> (e, data, grid) {
+$(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span>, <span class="kwd">function</span> (e, data, grid, originalEvent) {
     console.log(<span class="str">'row: '</span>, <span class="kwd">this</span>);
     console.log(<span class="str">'event: '</span>, e);
     console.log(<span class="str">'data: '</span>, data);
