--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -182,7 +182,7 @@
             <div class="sidebar content-block">
                 <ul>
                     <li>
-                        @Html.ActionLink("Grid configuration", "Configuration", "Grid")
+                        @Html.ActionLink("Grid javascript API", "Api", "Javascript")
                     </li>
                 </ul>
             </div>
